@@ -1482,6 +1482,8 @@ you may also set: "<aka> -r -mn" or "<aka> -w -r" and so on...
 purge after n days, 
 @item -$m <integer>
 leave max n messages after purge in area
+@item -nopack
+Do not purge or pack area (overwrites -p & -$m)
 @item -killRead
 kill read msgs in area on purging
 @item -keepUnread
